tests/ui/spirv-attr/invalid-matrix-type-empty.stderr
error: #[spirv(matrix)] type must have at least two fields
 --> $DIR/invalid-matrix-type-empty.rs:7:1
  |
7 | pub struct _EmptyStruct {}
  | ^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

